# brickmos

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: build.yml  publish.yml
brickmos/: brickify.py  defaults.py
data/: README.md
mosaic/: brickify.py  colors.csv
tests/: test_cli.py
tests/testdata/: iron-man.jpg.golden.bricklink.xml  iron-man.jpg.golden.output.hash  iron-man.jpg.golden.pixelated.hash
